[tool.poetry]
name = "cchrome"
version = "0.1.0"
description = "A chrome driver with the assurance of its get method loads page fully."
authors = ["Isaac To <candleindark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "4.5.0"
polling2 = "0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
